--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="order_management_detail_title">订单详情</string>
     <string name="order_num_title">订单编号</string>
     <string name="gas_station_title">加油站</string>
-    <string name="car_num_title">车牌号码</string>
+    <string name="num_of_gas_title">加油数量</string>
     <string name="order_detail">详情 ></string>
     <string name="user_name">姓名</string>
     <string name="gas_type">加油类型</string>
@@ -131,7 +131,7 @@
     </string>
     <string name="start_interface_select">请设置默认启动界面</string>
     <string name="cancel">取消</string>
-    <string name="logoutConfirm">确定退出app吗？</string>
+    <string name="logoutConfirm">确定退出登陆吗？</string>
 
     <!--地图模块-->
     <string name="app_id">输入您讯飞的appid</string>
